# py-udp-client

./: Dockerfile  README.md  client.py  pyproject.toml
src/: client.py
